cv.html oldal elkészítve

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -5,6 +5,7 @@
     <title></title>
 </head>
 <body>
-    Üdvözlet!
+    <h1>Üdvözlet!</h1>
+    <a href="cv.html">A cv.html oldal (csak saját felelősségre)</a>
 </body>
 </html>
