--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Jakab Dávid</h1>
-    <img src="man.bmp" alt="Portré kép">
+    <img src="man.jpg" alt="Portré kép">
     <div>
         <h2>Ki vagyok?</h2>
         <p>Hello. <span><em>Dávidnak</em></span> hívnak. </p>
