--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -3,33 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Süper jó weboldal</title>
+    <link rel="stylesheet" href="cv.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Jakab Dávid</h1>
-    <img src="man.jpg" alt="Portré kép">
-    <div>
-        <h2>Ki vagyok?</h2>
-        <p>Hello. <span><em>Dávidnak</em></span> hívnak. </p>
+    <div class="container">
+        <h1>Jakab Dávid</h1>
+        <div class="vonal"></div>
+        <div>
+            <img src="man.jpg" alt="Portré kép" id="profile-image">
+            <div id="ki-vagyok">
+                <h2>Ki vagyok?</h2>
+                <p>Hello. <span><em>Dávidnak</em></span> hívnak. </p>
+            </div>
+        </div>
+        <div class="vers">
+            <h2>Petőfi Sándor: Az Alföld</h2>
+            <a href="http://magyar-irodalom.elte.hu/sulinet/igyjo/setup/portrek/petofi/alf.htm">A teljes vers</a>
+            <p>Mit nekem te zordon Kárpátoknak<br>
+            Fenyvesekkel vadregényes tája!<br>
+            Tán csodállak, ámde nem szeretlek,<br>
+            képzetem hegyvölgyedet nem járja.</p>
+        </div>
+        <p>Legjobb betűk a magyar abc-ben:</p>
+        <ul>
+            <li>"G"</li>
+            <li>"K"</li>
+            <li>"ZS"</li>
+        </ul>
+        <p>Kedvenc filmjeim (csökkenő sorrendben):</p>
+        <ol>
+            <li>Micimackó és barátai</li>
+            <li>Támad a geometria</li>
+            <li>Stoy Tsory 2</li>
+        </ol>
+        <div class="vonal"></div>
+        <p class="footer">Az oldal csak oktatási célokra szolgál.</p>
     </div>
-    <div>
-        <h2>Petőfi Sándor: Az Alföld című versének első verszaka (csak a biztonság kedvéért)</h2>
-        <a href="http://magyar-irodalom.elte.hu/sulinet/igyjo/setup/portrek/petofi/alf.htm">A teljes vers (csak a biztonság kedvéért)</a>
-        <p>Mit nekem te zordon Kárpátoknak<br>
-        Fenyvesekkel vadregényes tája!<br>
-        Tán csodállak, ámde nem szeretlek,<br>
-        képzetem hegyvölgyedet nem járja.</p>
-    </div>
-    <p>Legjobb betűk a magyar abc-ben:</p>
-    <ul>
-        <li>"Ű"</li>
-        <li>"K"</li>
-        <li>"ZS"</li>
-    </ul>
-    <p>Kedvenc filmjeim (csökkenő sorrendben):</p>
-    <ol>
-        <li>Micimackó és barátai</li>
-        <li>Támad a geometria</li>
-        <li>Stoy Tsory 2</li>
-    </ol>
 </body>
 </html>
