index.html oldal frissítve

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Üdvözlet!</h1>
     <a href="cv.html">A cv.html oldal (csak saját felelősségre)</a>
+    <a href="hajo.html">A hajo.html oldal</a>
 </body>
 </html>
