pascal háromszög + index.html frissítve

--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <h1>Üdvözlet!</h1>
-    <a href="cv.html">A cv.html oldal (csak saját felelősségre)</a>
-    <a href="hajo.html">A hajo.html oldal</a>
+    <a href="cv.html">A cv.html oldal (csak saját felelősségre)</a><br>
+    <a href="hajo.html">A hajo.html oldal</a><br>
+    <a href="jsgyak.html">Pascal-háromszög</a>
 </body>
 </html>
