hajo.html Json és Javascript

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="hajo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="külső">
-        <div id="kérdés_szöveg">
-            <span id="szöveg">Maxime autem laudantium et. Distinctio sed magnam ut recusandae tempore blanditiis rerum. Atque aliquam nihil sunt veritatis.</span>
+        <div id="kérdés_doboz">
+            <span id="kérdés_szöveg">Maxime autem laudantium et. Distinctio sed magnam ut recusandae tempore blanditiis rerum. Atque aliquam nihil sunt veritatis.</span>
         </div>
-
         <div id="középső">
             <div id="válaszok">
-                <div id="válasz1" class="kerdes jó">Válasz 1</div>
-                <div id="válasz2" class="kerdes rossz">Válasz 2</div>
+                <div id="válasz1" class="kerdes">Válasz 1</div>
+                <div id="válasz2" class="kerdes">Válasz 2</div>
                 <div id="válasz3" class="kerdes">Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" alt="hmmmmm" draggable="false"/>
             </div>
         </div>
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Előre</div>
+            <div id="vissza" class="gomb kattintható">Vissza</div>
+            <div id="előre" class="gomb kattintható">Előre</div>
         </div>
     </div>
 </body>
