--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="hajo.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <script src="hetedik.js"></script>
+    <script src="hetedik2.js"></script>
 </head>
 <body>
     <div id="külső">
@@ -22,7 +22,7 @@
                 <div id="válasz3" class="kerdes">Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" alt="hmmmmm" draggable="false"/>
+                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" alt=" " draggable="false"/>
             </div>
         </div>
         <div id="vezérlő">
